--- a/.gitignore
+++ b/.gitignore
@@ -4,34 +4,7 @@ top_secret
 .DS_Store
 
 # Object files
-*.o
-*.ko
-*.obj
-*.elf
+obj
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
+# Shared objects
 *.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
